--- a/frontend-master/package.json
+++ b/frontend-master/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "filesize": "^6.1.0",
+    "firebase": "^7.17.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
