--- a/frontend-master/package.json
+++ b/frontend-master/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-icons": "^3.10.0",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-via-cep": "^2.0.8",
