Criação de máscaras nos inputs frontend e alteração no backend da movimentação de inventário.

--- a/frontend-master/package.json
+++ b/frontend-master/package.json
@@ -16,10 +16,13 @@
     "react-dropzone": "^11.0.1",
     "react-icons": "^3.10.0",
     "react-iframe": "^1.8.0",
+    "react-native-mask-cpf-cnpj": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-via-cep": "^2.0.8",
-    "styled-components": "^5.1.1"
+    "remask": "^0.1.0-alpha.5",
+    "styled-components": "^5.1.1",
+    "vanilla-masker": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
