--- a/frontend-master/package.json
+++ b/frontend-master/package.json
@@ -10,6 +10,7 @@
     "filesize": "^6.1.0",
     "firebase": "^7.17.1",
     "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
